--- a/src/app/upload-task/upload-task.component.html
+++ b/src/app/upload-task/upload-task.component.html
@@ -1,21 +1,24 @@
-<div *ngIf="percentage | async as pct">
-  <progress [value]="pct" max="100"></progress>
-  {{ pct | number }}%
-</div>
-
-
-
-<div *ngIf="snapshot | async as snap">
-
-  {{ snap.bytesTransferred }} of {{ snap.totalBytes }}
-
-  <div *ngIf="downloadURL as url">
-    <h3>Results!</h3>
-    <img [src]="url"><br>
-    <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+<div class="wrapper">
+  <div *ngIf="percentage | async as pct">
+    <mat-progress-bar mode="determinate" [value]="pct"></mat-progress-bar>
+    {{ pct | number }}%
   </div>
 
-  <button (click)="task.pause()" [disabled]="!isActive(snap)">Pause</button>
-  <button (click)="task.cancel()" [disabled]="!isActive(snap)">Cancel</button>
-  <button (click)="task.resume()" [disabled]="!(snap?.state === 'paused')">Resume</button>
+
+
+  <div *ngIf="(snapshot | async) as snap">
+    <div *ngIf="downloadURL | async as url; else placeholder">
+      <h3>Results!</h3>
+      <img [src]="url"><br>
+      <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+    </div>
+
+    <ng-template #placeholder>
+      <mat-spinner></mat-spinner>
+    </ng-template>
+
+    <button mat-flat-button color="accent" (click)="task.pause()" [disabled]="!isActive(snap)">Пауза</button>
+    <button mat-flat-button color="warn" (click)="task.cancel()" [disabled]="!isActive(snap)">Отмена</button>
+    <button mat-flat-button color="primary" (click)="task.resume()" [disabled]="!(snap?.state === 'paused')">Продолжить</button>
+  </div>
 </div>
