--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,6 @@
 progress::-webkit-progress-value {
   transition: width 0.1s ease;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
