--- a/src/app/upload-task/upload-task.component.scss
+++ b/src/app/upload-task/upload-task.component.scss
@@ -1,3 +1,54 @@
 .wrapper {
   width: 300px;
+  position: relative;
+  border-radius: 4px;
+
+  img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    transition: 200ms;
+
+    &.loading {
+      opacity: 0.1;
+    }
+  }
+
+  .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    border-radius: 4px;
+    transition: 100ms;
+
+    &:hover {
+      background: rgba(60, 58, 58, 0.8);
+    }
+
+    .controls {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      justify-content: space-around;
+
+      >* {
+        margin: 15px;
+      }
+
+      mat-icon {
+        font-size: 40px;
+        height: 40px;
+        width: 40px;
+        line-height: 40px;
+      }
+    }
+  }
+}
+
+.file-name {
+  margin: 5px;
+  text-align: center;
 }
