--- a/src/app/uploader/uploader.component.scss
+++ b/src/app/uploader/uploader.component.scss
@@ -1,15 +1,16 @@
 .dropzone {
   display: flex;
+  padding: 15px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  min-width: 80vw;
   font-weight: 200;
-  height: 300px;
+  height: 250px;
   border: 2px dashed rgb(0, 110, 255);
   border-radius: 5px;
   background: white;
   transition: 200ms;
+  text-align: center;
 
   &.hovering {
     border: 2px solid rgb(0, 110, 255);
