--- a/src/app/admin/uploader/upload-task/upload-task.component.scss
+++ b/src/app/admin/uploader/upload-task/upload-task.component.scss
@@ -1,12 +1,31 @@
 .wrapper {
   width: 300px;
+  height: 250px;
   position: relative;
-  border-radius: 4px;
+  border-radius: 2px;
+  text-align: center;
+  transition: 350ms;
+  z-index: 100;
 
-  img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &.zoomed {
+    background: white;
+    z-index: 999;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(3);
+    border: 1px solid #8080801f;
+  }
+
+  img,
+  video {
+    max-height: 100%;
+    max-width: 100%;
+
     transition: 200ms;
 
     &.loading {
@@ -20,11 +39,11 @@
     width: 100%;
     height: 100%;
     top: 0;
-    border-radius: 4px;
+    border-radius: 2px;
     transition: 100ms;
 
     &:hover {
-      background: rgba(60, 58, 58, 0.8);
+      background: rgba(60, 58, 58, 0.527);
     }
 
     .controls {
@@ -52,4 +71,8 @@
 .file-name {
   margin: 5px;
   text-align: center;
+
+  .ext {
+    font-weight: bold;
+  }
 }
