fixes, formatting, refactoring

--- a/src/app/admin/slides-list/slides-list.component.html
+++ b/src/app/admin/slides-list/slides-list.component.html
@@ -1,21 +1,34 @@
 <ng-container *ngIf="list?.length > 0">
-  <h2>Слайды</h2>
-  <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)" *ngIf="list">
+  <h3>Очерёдность слайдов</h3>
+  <div
+    cdkDropList
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+    *ngIf="list"
+  >
     <div class="example-box" *ngFor="let slide of sortBy('sort')" cdkDrag>
       <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
       {{ slide.name }}
 
       <ng-container [ngSwitch]="slide.type">
         <ng-template [ngSwitchCase]="'image'">
-          <img *cdkDragPreview [src]="slide.downloadURL" [alt]="slide.name">
+          <img *cdkDragPreview [src]="slide.downloadURL" [alt]="slide.name" />
         </ng-template>
         <ng-template [ngSwitchCase]="'video'">
-          <video *cdkDragPreview [src]="slide.downloadURL" loop autoplay [muted]="true"></video>
+          <video
+            *cdkDragPreview
+            [src]="slide.downloadURL"
+            loop
+            autoplay
+            [muted]="true"
+          ></video>
         </ng-template>
       </ng-container>
+
+      <button mat-button (click)="delete(slide.id, slide.path)"><mat-icon color="warn">delete</mat-icon></button>
     </div>
   </div>
 
-  <h4 *ngIf="saved" style="color: green">Сохранено</h4>
-  <h4 *ngIf="!saved" style="color: red">Идёт сохранение...</h4>
+  <h4 *ngIf="saved === true" style="color: green">Сохранено</h4>
+  <h4 *ngIf="saved === false" style="color: red">Идёт сохранение...</h4>
 </ng-container>
