--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,30 @@
 <ng-container *ngIf="slides?.length > 0">
-  <div *ngFor="let slide of sortBy('sort');let i = index" [hidden]="currentSlide != i"
-    [@slideAnimation]="currentSlide === i ? 'active' : 'inactive'">
+  <div
+    *ngFor="let slide of sortBy('sort'); let i = index"
+    [ngClass]="{ hidden: currentSlide !== i }"
+    class="slide"
+  >
     <ng-container [ngSwitch]="slide.type">
       <ng-template [ngSwitchCase]="'image'">
-        <img [src]="slide.downloadURL" [alt]="slide.name">
+        <img [src]="slide.downloadURL" [alt]="slide.name" />
       </ng-template>
       <ng-template [ngSwitchCase]="'video'">
         <video [src]="slide.downloadURL" loop autoplay [muted]="true"></video>
       </ng-template>
     </ng-container>
+  </div>
+
+  <div class="datetime" *ngIf="dateRU && dateENG && time">
+    <div class="time">
+      {{ time }}
+    </div>
+    <div class="dates">
+      <div class="date">
+        {{ dateRU }}
+      </div>
+      <div class="date">
+        {{ dateENG }}
+      </div>
+    </div>
   </div>
 </ng-container>
