--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,7 @@
 <app-uploader></app-uploader>
 
-<app-slides-list></app-slides-list>
+<div style="display: flex; justify-content: center; flex-wrap: wrap;">
+  <app-slides-list></app-slides-list>
 
-<app-slides-interval></app-slides-interval>
+  <app-slides-interval></app-slides-interval>
+</div>
