--- a/src/app/admin/slides-interval/slides-interval.component.scss
+++ b/src/app/admin/slides-interval/slides-interval.component.scss
@@ -1,3 +1,22 @@
-mat-slider{
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px;
+  max-width: 100%;
+}
+
+mat-slider {
   width: 300px;
+}
+
+.header {
+  text-align: center;
+  align-items: center;
+  margin: 15px;
+
+  span {
+    font-weight: 500;
+    text-transform: lowercase;
+  }
 }
