--- a/src/app/admin/slides-list/slides-list.component.scss
+++ b/src/app/admin/slides-list/slides-list.component.scss
@@ -1,5 +1,20 @@
 :host {
   margin: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100%;
+}
+
+.header {
+  text-align: center;
+  align-items: center;
+  margin: 15px;
+
+  span {
+    font-weight: 500;
+    text-transform: lowercase;
+  }
 }
 
 .example-list {
@@ -10,11 +25,11 @@
   display: block;
   background: white;
   border-radius: 4px;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .example-box {
-  padding: 20px 10px;
+  padding: 15px 5px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
@@ -22,7 +37,6 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  cursor: move;
   background: white;
   font-size: 14px;
 }
@@ -31,8 +45,8 @@
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-animating {
@@ -54,6 +68,11 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-img, video {
+.handle {
+  cursor: move;
+}
+
+img,
+video {
   max-height: 300px;
 }
