--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,5 @@
 <ng-container *ngIf="slides?.length > 0">
-  <div
-    *ngFor="let slide of sortBy('sort'); let i = index"
-    [ngClass]="{ hidden: currentSlide !== i }"
-    class="slide"
-  >
+  <div *ngFor="let slide of sortBy('sort'); let i = index; trackBy: trackByFn;" [ngClass]="{ hidden: currentSlide !== i }" class="slide">
     <ng-container [ngSwitch]="slide.type">
       <ng-template [ngSwitchCase]="'image'">
         <img [src]="slide.downloadURL" [alt]="slide.name" />
