--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,9 @@
-<ng-container *ngIf="slides?.length > 0">
-  <div *ngFor="let slide of sortBy('sort'); let i = index; trackBy: trackByFn;" [ngClass]="{ hidden: currentSlide !== i }" class="slide">
+<div class="slides" *ngIf="slides?.length > 0">
+  <div
+    *ngFor="let slide of sortBy('sort'); let i = index; trackBy: trackByFn"
+    [ngClass]="{ hidden: currentSlide !== i }"
+    class="slide"
+  >
     <ng-container [ngSwitch]="slide.type">
       <ng-template [ngSwitchCase]="'image'">
         <img [src]="slide.downloadURL" [alt]="slide.name" />
@@ -23,4 +27,36 @@
       </div>
     </div>
   </div>
-</ng-container>
+</div>
+
+<div class="info">
+  <div class="weather info-block">
+    <div class="weather-block" *ngIf="(currentTemp$ | async) as temp">
+      <h2>Сегодня / Today</h2>
+      <div class="morning">
+        <h4>Сейчас / Now</h4>
+        <span class="value">{{ temp }}</span>
+      </div>
+
+      <div class="evening">
+        <h4>Вечером / Evening</h4>
+        <span class="value">+1</span>
+      </div>
+    </div>
+
+    <div class="weather-block">
+      <h2>Завтра / Tomorrow</h2>
+      <div class="morning">
+        <h4>Утром / Morning</h4>
+        <span class="value">+15</span>
+      </div>
+
+      <div class="evening">
+        <h4>Вечером / Evening</h4>
+        <span class="value">+5</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="currency info-block">test2</div>
+</div>
