--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,6 @@
 <div class="slides" *ngIf="slides?.length > 0">
-  <div
-    *ngFor="let slide of sortBy('sort'); let i = index; trackBy: trackByFn"
-    [ngClass]="{ hidden: currentSlide !== i }"
-    class="slide"
-  >
+  <div *ngFor="let slide of sortBy('sort'); let i = index; trackBy: trackByFn"
+    [ngClass]="{ 'hidden': currentSlide !== i, 'fullscreen': slide.fullscreen }" class="slide">
     <ng-container [ngSwitch]="slide.type">
       <ng-template [ngSwitchCase]="'image'">
         <img [src]="slide.downloadURL" [alt]="slide.name" />
@@ -31,40 +28,44 @@
 
 <div class="info">
   <div class="weather info-block">
-    <div class="weather-day" *ngIf="(currentTemp$ | async) as temp">
-      <h2>Сегодня / Today</h2>
-      <div class="now">
-        <h4>Сейчас / Now</h4>
-        <span class="value">{{ temp.value }}</span>
-        <img [src]="temp.icon" class="icon" />
+
+    <ng-container *ngIf="(forecast$ | async) as forecast">
+      <div class="weather-day" *ngIf="(currentTemp$ | async) as temp">
+        <h2>Сегодня / Today</h2>
+        <div class="now">
+          <h4>Сейчас / Now</h4>
+          <span class="value">{{ temp.value }}</span>
+          <img [src]="temp.icon" class="icon" />
+        </div>
+
+        <div class="forecast">
+          <h4 *ngIf="forecast.nearest.type === 'morning'">
+            Утром / Morning
+          </h4>
+          <h4 *ngIf="forecast.nearest.type === 'evening'">
+            Вечером / Evening
+          </h4>
+          <span class="value">{{ forecast.nearest.value }}</span>
+          <img [src]="forecast.nearest.icon" class="icon" />
+        </div>
       </div>
 
-      <div class="forecast" *ngIf="(forecast$ | async) as forecast">
-        <h4 *ngIf="forecast.nearest.type === 'morning'">
-          Утром / Morning
-        </h4>
-        <h4 *ngIf="forecast.nearest.type === 'evening'">
-          Вечером / Evening
-        </h4>
-        <span class="value">{{ forecast.nearest.value }}</span>
-        <img [src]="forecast.nearest.icon" class="icon" />
-      </div>
-    </div>
+      <div class="weather-day">
+        <h2>Завтра / Tomorrow</h2>
+        <div class="morning">
+          <h4>Утром / Morning</h4>
+          <span class="value">{{ forecast.tomorrow.morning.value }}</span>
+          <img [src]="forecast.tomorrow.morning.icon" class="icon" />
+        </div>
 
-    <div class="weather-day" *ngIf="(forecast$ | async) as forecast">
-      <h2>Завтра / Tomorrow</h2>
-      <div class="morning">
-        <h4>Утром / Morning</h4>
-        <span class="value">{{ forecast.tomorrow.morning.value }}</span>
-        <img [src]="forecast.tomorrow.morning.icon" class="icon" />
+        <div class="evening">
+          <h4>Вечером / Evening</h4>
+          <span class="value">{{ forecast.tomorrow.evening.value }}</span>
+          <img [src]="forecast.tomorrow.evening.icon" class="icon" />
+        </div>
       </div>
+    </ng-container>
 
-      <div class="evening">
-        <h4>Вечером / Evening</h4>
-        <span class="value">{{ forecast.tomorrow.evening.value }}</span>
-        <img [src]="forecast.tomorrow.evening.icon" class="icon" />
-      </div>
-    </div>
   </div>
 
   <div class="currency info-block">currency</div>
