--- a/src/app/admin/slides-list/slide/slide.component.scss
+++ b/src/app/admin/slides-list/slide/slide.component.scss
@@ -7,4 +7,10 @@ video {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  flex: 1;
+}
+
+
+app-holdable-delete {
+  margin: 10px;
 }
