--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,7 +13,7 @@
   .slide {
     position: absolute;
     opacity: 1;
-    transition: opacity 400ms linear;
+    transition: opacity 200ms linear;
     width: 56.25vw;
     max-height: 100vh;
     overflow: hidden;
@@ -25,8 +25,12 @@
       object-fit: cover;
     }
 
+    &.fullscreen {
+      width: 100vw;
+    }
+
     &.hidden {
-      transition: opacity 2000ms linear;
+      transition: opacity 1000ms linear;
       opacity: 0;
     }
   }
@@ -61,7 +65,7 @@
       }
     }
 
-    > * {
+    >* {
       margin: 25px;
       padding: 15px;
     }
