--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,6 @@
 <div class="slides" *ngIf="slides?.length > 0">
-  <div
-    *ngFor="let slide of sortSlides('sort'); let i = index; trackBy: trackByFn"
-    [ngClass]="{ hidden: currentSlide !== i, fullscreen: slide.fullscreen }"
-    class="slide"
-  >
+  <div *ngFor="let slide of sortSlides('sort'); let i = index; trackBy: trackByFn"
+    [ngClass]="{ hidden: currentSlide !== i, fullscreen: slide.fullscreen }" class="slide">
     <ng-container [ngSwitch]="slide.type">
       <ng-template [ngSwitchCase]="'image'">
         <img [src]="slide.downloadURL" [alt]="slide.name" />
