--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -65,7 +65,7 @@
       }
     }
 
-    >* {
+    > * {
       margin: 25px;
       padding: 15px;
     }
@@ -76,10 +76,11 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   padding: 0 15px;
   color: white;
+  max-height: 100vh;
 
   .info-block {
     text-align: center;
@@ -87,13 +88,33 @@
     border-radius: 10px;
     box-shadow: 4px 4px 4px black;
     margin: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    &.currency {
+      font-size: 6vh;
+      font-weight: bold;
+
+      .value {
+        margin: 25px;
+        padding: 5px;
+      }
+    }
+
+    h2 {
+      flex-basis: 100%;
+      margin-bottom: 0;
+      margin-top: 10px;
+      font-size: 5vh;
+    }
 
     &.weather {
       .weather-day {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        margin: 50px 0;
+        margin: 15px 0;
 
         h2 {
           flex-basis: 100%;
@@ -122,7 +143,7 @@
           }
 
           .icon {
-            height: 10vh;
+            height: 15vh;
             width: auto;
           }
         }
