--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,7 +25,7 @@
       object-fit: cover;
     }
 
-    &.fullscreen {
+    &.fullscreen:not(.hidden) {
       width: 100vw;
     }
 
@@ -65,7 +65,7 @@
       }
     }
 
-    > * {
+    >* {
       margin: 25px;
       padding: 15px;
     }
