--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,8 @@ progress::-webkit-progress-value {
 }
 
 html,
-body {
+body,
+app-root {
   height: 100%;
 }
 
@@ -11,4 +12,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+button .mat-icon {
+  vertical-align: middle !important;
 }
