--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,11 @@
-<ng-container *ngIf="auth | async">
+<ng-container *ngIf="(auth | async)">
   <ngx-auth-firebaseui-user></ngx-auth-firebaseui-user>
   <a mat-raised-button routerLink="/admin" color="accent">Перейти к админке</a>
 </ng-container>
 
-
-
-<ngx-auth-firebaseui *ngIf="!(auth | async)" (onSuccess)="printUser($event)" (onError)="printError($event)">
+<ngx-auth-firebaseui
+  *ngIf="!(auth | async)"
+  (onSuccess)="success($event)"
+  (onError)="error($event)"
+>
 </ngx-auth-firebaseui>
