--- a/src/app/admin/slides-list/slides-list.component.html
+++ b/src/app/admin/slides-list/slides-list.component.html
@@ -5,26 +5,43 @@
     <span *ngIf="saved === false" style="color: red">Идёт сохранение...</span>
   </div>
 
-  <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)" *ngIf="list">
-    <app-slide class="example-box" *ngFor="let slide of sortBy('sort'); trackBy: trackByFn;" cdkDrag [slide]="slide"
-      @delete>
-
+  <div
+    cdkDropList
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+    *ngIf="list"
+  >
+    <app-slide
+      class="example-box"
+      *ngFor="let slide of sortBy('sort'); trackBy: trackByFn"
+      cdkDrag
+      [slide]="slide"
+      @delete
+    >
       <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
 
-      <button mat-flat-button color="grey" class="handle">
-        <mat-icon cdkDragHandle>drag_handle</mat-icon>
-      </button>
+      <mat-icon
+        cdkDragHandle
+        matTooltip="Перетащите для сортировки"
+        matTooltipPosition="above"
+        class="handle"
+        >drag_handle</mat-icon
+      >
 
       <ng-container [ngSwitch]="slide.type">
         <ng-template [ngSwitchCase]="'image'">
           <img *cdkDragPreview [src]="slide.downloadURL" [alt]="slide.name" />
         </ng-template>
         <ng-template [ngSwitchCase]="'video'">
-          <video *cdkDragPreview [src]="slide.downloadURL" loop autoplay [muted]="true"></video>
+          <video
+            *cdkDragPreview
+            [src]="slide.downloadURL"
+            loop
+            autoplay
+            [muted]="true"
+          ></video>
         </ng-template>
       </ng-container>
     </app-slide>
-
   </div>
-
 </ng-container>
