--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,77 +1,2 @@
-<div class="slides" *ngIf="slides?.length > 0">
-  <div
-    *ngFor="let slide of sortSlides('sort'); let i = index; trackBy: trackByFn"
-    [ngClass]="{ hidden: currentSlide !== i, fullscreen: slide.fullscreen }"
-    class="slide"
-  >
-    <ng-container [ngSwitch]="slide.type">
-      <ng-template [ngSwitchCase]="'image'">
-        <img [src]="slide.downloadURL" [alt]="slide.name" />
-      </ng-template>
-      <ng-template [ngSwitchCase]="'video'">
-        <video [src]="slide.downloadURL" loop autoplay [muted]="true"></video>
-      </ng-template>
-    </ng-container>
-  </div>
-
-  <div class="datetime" *ngIf="dateRU && dateENG && time">
-    <div class="time">
-      {{ time }}
-    </div>
-    <div class="dates">
-      <div class="date">
-        {{ dateRU }}
-      </div>
-      <div class="date">
-        {{ dateENG }}
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="info">
-  <div class="weather info-block">
-    <ng-container *ngIf="(forecast$ | async) as forecast">
-      <div class="weather-day" *ngIf="(currentTemp$ | async) as temp">
-        <h2>Сегодня / Today</h2>
-        <div class="now">
-          <h4>Сейчас / Now</h4>
-          <span class="value">{{ temp.value }}</span>
-          <img [src]="temp.icon" class="icon" />
-        </div>
-
-        <div class="forecast">
-          <h4 *ngIf="forecast.nearest.type === 'morning'">
-            Утром / Morning
-          </h4>
-          <h4 *ngIf="forecast.nearest.type === 'evening'">
-            Вечером / Evening
-          </h4>
-          <span class="value">{{ forecast.nearest.value }}</span>
-          <img [src]="forecast.nearest.icon" class="icon" />
-        </div>
-      </div>
-
-      <div class="weather-day">
-        <h2>Завтра / Tomorrow</h2>
-        <div class="morning">
-          <h4>Утром / Morning</h4>
-          <span class="value">{{ forecast.tomorrow.morning.value }}</span>
-          <img [src]="forecast.tomorrow.morning.icon" class="icon" />
-        </div>
-
-        <div class="evening">
-          <h4>Вечером / Evening</h4>
-          <span class="value">{{ forecast.tomorrow.evening.value }}</span>
-          <img [src]="forecast.tomorrow.evening.icon" class="icon" />
-        </div>
-      </div>
-    </ng-container>
-  </div>
-
-  <div class="currency info-block" *ngIf="(currency$ | async) as currency">
-    <h2>Курсы валют / Exchange rates</h2>
-    <div class="value">$ {{ currency.usd }}</div>
-    <div class="value">€ {{ currency.euro }}</div>
-  </div>
-</div>
+<app-slider [slides]="slides"></app-slider>
+<app-info></app-info>
