--- a/src/app/admin/slides-list/slide/slide.component.html
+++ b/src/app/admin/slides-list/slide/slide.component.html
@@ -1,14 +1,19 @@
 <ng-content></ng-content>
-<span class="name" [matTooltip]="slide.name" matTooltipPosition="above">{{ slide.name }}</span>
-
+<span class="name" [matTooltip]="slide.name" matTooltipPosition="above">{{
+  slide.name
+}}</span>
 
 <mat-chip-list>
-  <mat-chip color="primary" selected *ngIf="slide.fullscreen" (removed)="fullscreenChange(false)">
+  <mat-chip
+    color="primary"
+    selected
+    *ngIf="slide.fullscreen"
+    (removed)="fullscreenChange(false)"
+  >
     fullscreen
     <mat-icon matChipRemove>cancel</mat-icon>
   </mat-chip>
 </mat-chip-list>
-
 
 <app-holdable-delete (deleted)="delete($event)"></app-holdable-delete>
 
@@ -17,8 +22,22 @@
 </button>
 
 <mat-menu #menu="matMenu" style="display: none;">
-  <mat-checkbox class="mat-menu-item" color="primary" [checked]="slide.fullscreen"
-    (change)="fullscreenChange($event.checked)">
+  <mat-checkbox
+    class="mat-menu-item"
+    color="primary"
+    [checked]="slide.fullscreen"
+    (change)="fullscreenChange($event.checked)"
+  >
     На полный экран
+  </mat-checkbox>
+
+  <mat-checkbox
+    *ngIf="slide.fullscreen"
+    class="mat-menu-item"
+    color="primary"
+    [checked]="slide.hidetime"
+    (change)="hidetimeChange($event.checked)"
+  >
+    Скрывать время
   </mat-checkbox>
 </mat-menu>
