--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,157 +1,18 @@
 :host {
   display: flex;
-  justify-content: space-between;
   overflow: hidden;
   background-color: #2b2a29;
 }
 
-.slides {
-  width: 56.25%;
+
+app-slider {
+  display: block;
+  width: 56.25vw;
   height: 100vh;
-  overflow: hidden;
-
-  .slide {
-    position: absolute;
-    opacity: 1;
-    transition: opacity 200ms linear;
-    width: 56.25vw;
-    max-height: 100vh;
-    overflow: hidden;
-
-    img,
-    video {
-      height: 100vh;
-      width: 100%;
-      object-fit: cover;
-    }
-
-    &.fullscreen:not(.hidden) {
-      width: 100vw;
-    }
-
-    &.hidden {
-      transition: opacity 1000ms linear;
-      opacity: 0;
-    }
-  }
-
-  .datetime {
-    z-index: 999;
-    position: absolute;
-    bottom: 0;
-    background: #00000080;
-    border-radius: 10px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    color: white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-weight: bold;
-    text-shadow: 4px 3px 0px #000;
-    width: 56.25vw;
-
-    .time {
-      font-size: 10vh;
-    }
-
-    .dates {
-      display: flex;
-      flex-direction: column;
-
-      .date {
-        margin: 10px;
-        font-size: 4vh;
-      }
-    }
-
-    >* {
-      margin: 25px;
-      padding: 15px;
-    }
-  }
 }
 
-.info {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
-  padding: 0 15px;
-  color: white;
-  max-height: 100vh;
-
-  .info-block {
-    text-align: center;
-    background: #434242;
-    border-radius: 10px;
-    box-shadow: 4px 4px 4px black;
-    margin: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-
-    &.currency {
-      font-size: 6vh;
-      font-weight: bold;
-
-      .value {
-        margin: 25px;
-        padding: 5px;
-      }
-    }
-
-    h2 {
-      flex-basis: 100%;
-      margin-bottom: 0;
-      margin-top: 10px;
-      font-size: 5vh;
-    }
-
-    &.weather {
-      .weather-day {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 15px 0;
-
-        h2 {
-          flex-basis: 100%;
-          margin-bottom: 0;
-          margin-top: 10px;
-          font-size: 5vh;
-        }
-
-        .morning,
-        .evening,
-        .forecast,
-        .now {
-          padding: 0 25px;
-          font-size: 3vh;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-
-          h4 {
-            margin: 1vh;
-          }
-
-          .value {
-            font-size: 6vh;
-            font-weight: bold;
-          }
-
-          .icon {
-            height: 15vh;
-            width: auto;
-          }
-        }
-      }
-    }
-  }
-}
-
-* {
-  font-family: Candara, 'Times New Roman', serif;
+app-info {
+  display: block;
+  height: 100vh;
+  width: 43.75vw;
 }
