do not show drag handle when there is only one slide

--- a/src/app/admin/slides-list/slides-list.component.html
+++ b/src/app/admin/slides-list/slides-list.component.html
@@ -21,6 +21,7 @@
       <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
 
       <mat-icon
+        *ngIf="list.length > 1"
         cdkDragHandle
         matTooltip="Перетащите для сортировки"
         matTooltipPosition="above"
