--- a/src/app/home/info/info.component.scss
+++ b/src/app/home/info/info.component.scss
@@ -51,20 +51,20 @@
           @keyframes MoveUpDown {
             0%,
             100% {
-              transform: translateY(0);
+              transform: translateY(0) scale(1);
             }
             50% {
-              transform: translateY(-10px);
+              transform: translateY(-10px) scale(1.4);
             }
           }
 
           @keyframes MoveDownUp {
             0%,
             100% {
-              transform: translateY(0);
+              transform: translateY(0) scale(1);
             }
             50% {
-              transform: translateY(10px);
+              transform: translateY(10px) scale(0.7);
             }
           }
         }
