--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,5 @@
 <app-slider [slides]="slides"></app-slider>
 <app-info></app-info>
+
+<div class="foreground" [style.background-image]="'url(/assets/mini_smile.webp)'"></div>
+<div class="foreground" [style.background-image]="'url(/assets/maslenica_gif.gif)'"></div>
