--- a/src/app/shared/holdable-delete/holdable-delete.component.scss
+++ b/src/app/shared/holdable-delete/holdable-delete.component.scss
@@ -1,9 +1,21 @@
-button.delete {
-  position: relative;
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
 
-  mat-progress-spinner {
-    position: absolute;
-    right: -17px;
-    top: -17px;
+  &.titled {
+    border: 1px dashed #fd0909bf;
+    border-radius: 3px;
+  }
+
+  button.delete {
+    position: relative;
+
+    mat-progress-spinner {
+      position: absolute;
+      right: -17px;
+      top: -17px;
+    }
   }
 }
