--- a/src/app/admin/slides-list/slide/slide.component.html
+++ b/src/app/admin/slides-list/slide/slide.component.html
@@ -4,16 +4,14 @@
 }}</span>
 
 <mat-chip-list>
-  <mat-chip
-    color="primary"
-    selected
-    *ngIf="slide.fullscreen"
-    (removed)="fullscreenChange(false)"
-  >
+  <mat-chip color="primary" selected *ngIf="slide.fullscreen" (removed)="fullscreenChange(false)">
     fullscreen
     <mat-icon matChipRemove>cancel</mat-icon>
   </mat-chip>
 </mat-chip-list>
+
+<app-visibility-button [visible]="slide.visible" (changed)="visibilityChange($event)">
+</app-visibility-button>
 
 <app-holdable-delete (deleted)="delete($event)"></app-holdable-delete>
 
@@ -22,22 +20,13 @@
 </button>
 
 <mat-menu #menu="matMenu" style="display: none;">
-  <mat-checkbox
-    class="mat-menu-item"
-    color="primary"
-    [checked]="slide.fullscreen"
-    (change)="fullscreenChange($event.checked)"
-  >
+  <mat-checkbox class="mat-menu-item" color="primary" [checked]="slide.fullscreen"
+    (change)="fullscreenChange($event.checked)">
     На полный экран
   </mat-checkbox>
 
-  <mat-checkbox
-    *ngIf="slide.fullscreen"
-    class="mat-menu-item"
-    color="primary"
-    [checked]="slide.hidetime"
-    (change)="hidetimeChange($event.checked)"
-  >
+  <mat-checkbox *ngIf="slide.fullscreen" class="mat-menu-item" color="primary" [checked]="slide.hidetime"
+    (change)="hidetimeChange($event.checked)">
     Скрывать время
   </mat-checkbox>
 </mat-menu>
