--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,8 +3,15 @@
   overflow: hidden;
   background-color: #2b2a29;
 }
-
-
+.foreground {
+  // background-image: url(/assets/mini_smile.webp);
+  z-index: 1000;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 app-slider {
   display: block;
   width: 56.25vw;
