--- a/src/app/admin/uploader/upload-task/upload-task.component.html
+++ b/src/app/admin/uploader/upload-task/upload-task.component.html
@@ -1,5 +1,26 @@
 <div class="wrapper" (mouseover)="hover=true" (mouseleave)="hover=false" [class.zoomed]="zoomed">
   <img *ngIf="isImage && localUrl" [src]="localUrl | safe: 'url'" [class.loading]="isLoading">
+
+  <div class="overlay" [hidden]="!hover">
+    <div class="controls" *ngIf="(snapshot | async) as snap">
+      <a download mat-icon-button *ngIf="downloadURL" [href]="downloadURL" target="_blank" matTooltip="Скачать"
+        matTooltipPosition="above">
+        <mat-icon style="color: white">cloud_download</mat-icon>
+      </a>
+
+      <!--  <app-holdable-delete (deleted)="onDelete($event)"></app-holdable-delete> -->
+    </div>
+  </div>
+</div>
+<div class="meta">
+  <p class="file-name">{{ filename }}<span class="ext">.{{ fileExt }}</span></p>
+  <app-progress-bar *ngIf="percent" [value]="percent"></app-progress-bar>
+</div>
+
+
+
+<!-- <div class="wrapper" (mouseover)="hover=true" (mouseleave)="hover=false" [class.zoomed]="zoomed">
+  <img *ngIf="isImage && localUrl" [src]="localUrl | safe: 'url'" [class.loading]="isLoading">
   <video *ngIf="isVideo && localUrl" autoplay loop [muted]="isMuted" [src]="localUrl | safe: 'url'"
     [class.loading]="isLoading"></video>
   <img *ngIf="!isImage && !isVideo" src="assets/file.svg" style="object-fit: contain;" [class.loading]="isLoading">
@@ -28,4 +49,4 @@
 <div class="meta" *ngIf="!zoomed">
   <p class="file-name">{{ filename }}<span class="ext">.{{ fileExt }}</span></p>
   <app-progress-bar *ngIf="percent" [value]="percent"></app-progress-bar>
-</div>
+</div> -->
